--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     });
 </script>
 
-<img src="images/demo-pl/_empty.png" class="slideshow-border">
-<div class="slideshow" style="position: absolute;">
-    <img src="images/demo-pl/logo_clear.png">
-    <img src="images/demo-pl/register_clear.png">
-    <img src="images/demo-pl/menu_clear.png">
-    <img src="images/demo-pl/plot_clear.png">
-    <img src="images/demo-pl/achievement_clear.png">
+<div id="phone-container">
+	<img src="images/demo-pl/_empty.png" class="slideshow-border">
+	<div class="slideshow">
+   		<img src="images/demo-pl/logo_clear.png">
+    	<img src="images/demo-pl/register_clear.png">
+    	<img src="images/demo-pl/menu_clear.png">
+    	<img src="images/demo-pl/plot_clear.png">
+    	<img src="images/demo-pl/achievement_clear.png">
+	</div>
 </div>
 </body>
 </html>
