--- a/index.html
+++ b/index.html
@@ -6,13 +6,173 @@
     <title>FitnessAdventure</title>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
-    <!--<link rel="icon" type="image/x-icon" href="" />-->
-    <!-- Jquery and Plug-ins -->
-    <script src="js/lib/jquery-1.11.2.min.js"></script>
-    <script src="js/plugin/jquery.cycle.all.js"></script>
-    <!-- Slideshow -->
 </head>
 <body>
+
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <form class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" placeholder="Email" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="password" placeholder="Password" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-success">Sign in</button>
+            </form>
+        </div>
+        <!--/.navbar-collapse -->
+    </div>
+</nav>
+
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+    <div class="container">
+        <h1>Hello, world!</h1>
+
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called a
+            jumbotron and three supporting pieces of content. Use it as a starting point to create something more
+            unique.</p>
+
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    </div>
+</div>
+
+<div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Heading</h2>
+
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+                euismod. Donec sed odio dui. </p>
+
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Heading</h2>
+
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+                euismod. Donec sed odio dui. </p>
+
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Heading</h2>
+
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
+                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+                fermentum massa justo sit amet risus.</p>
+
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+    </div>
+
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h2 class="featurette-heading">First featurette heading. <span
+                    class="text-muted">It'll blow your mind.</span></h2>
+
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
+                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+                commodo.</p>
+        </div>
+        <div class="col-md-5">
+            <div id="phone-container">
+                <img src="images/demo-pl/_empty.png" class="slideshow-border">
+
+                <div class="slideshow">
+                    <img src="images/demo-pl/logo_clear.png">
+                    <img src="images/demo-pl/register_clear.png">
+                    <img src="images/demo-pl/menu_clear.png">
+                    <img src="images/demo-pl/plot_clear.png">
+                    <img src="images/demo-pl/achievement_clear.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <div id="phone-container">
+                <img src="images/demo-pl/_empty.png" class="slideshow-border">
+
+                <div class="slideshow">
+                    <img src="images/demo-pl/logo_clear.png">
+                    <img src="images/demo-pl/register_clear.png">
+                    <img src="images/demo-pl/menu_clear.png">
+                    <img src="images/demo-pl/plot_clear.png">
+                    <img src="images/demo-pl/achievement_clear.png">
+                </div>
+            </div>
+        </div>
+        <div class="col-md-7">
+            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span>
+            </h2>
+
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
+                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+                commodo.</p>
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
+                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+                commodo.</p>
+        </div>
+        <div class="col-md-5">
+            <div id="phone-container">
+                <img src="images/demo-pl/_empty.png" class="slideshow-border">
+
+                <div class="slideshow">
+                    <img src="images/demo-pl/logo_clear.png">
+                    <img src="images/demo-pl/register_clear.png">
+                    <img src="images/demo-pl/menu_clear.png">
+                    <img src="images/demo-pl/plot_clear.png">
+                    <img src="images/demo-pl/achievement_clear.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+
+    <footer>
+        <p>&copy; Company 2014</p>
+    </footer>
+</div>
+
+<!--<link rel="icon" type="image/x-icon" href="" />-->
+<!-- Jquery and Plug-ins -->
+<script src="js/lib/jquery-1.11.2.min.js"></script>
+<script src="js/plugin/jquery.cycle.all.js"></script>
+<!-- Slideshow -->
 <script type="text/javascript">
     $(document).ready(function () {
         $('.slideshow').cycle({
@@ -21,16 +181,6 @@
     });
 </script>
 
-<div id="phone-container">
-	<img src="images/demo-pl/_empty.png" class="slideshow-border">
-	<div class="slideshow">
-   		<img src="images/demo-pl/logo_clear.png">
-    	<img src="images/demo-pl/register_clear.png">
-    	<img src="images/demo-pl/menu_clear.png">
-    	<img src="images/demo-pl/plot_clear.png">
-    	<img src="images/demo-pl/achievement_clear.png">
-	</div>
-</div>
 </body>
 </html>
 
