--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>FitnessAdventure</title>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+
+    <style>
+    .jumbotron {
+        background: url('images/background_map.png') no-repeat center center;
+    }
+    </style>
 </head>
 <body>
 
@@ -20,18 +26,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">FitnessAdventure</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <form class="navbar-form navbar-right">
-                <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control">
-                </div>
-                <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
-            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="">Home</a></li>
+                <li><a href="#hero">The Hero</a></li>
+                <li><a href="#game">The Game</a></li>
+                <li><a href="#developers">The Masterminds</a></li>
+              </ul>
         </div>
         <!--/.navbar-collapse -->
     </div>
@@ -40,45 +43,42 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1>Hello, world!</h1>
+        <h1 class="header-title">Your Quest begins now.</h1>
+        <p style="color: white; ">Jump start your new lifestyle and battle the laziness - both in game and in real life.</p>
 
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a
-            jumbotron and three supporting pieces of content. Use it as a starting point to create something more
-            unique.</p>
-
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p><a href="https://play.google.com/store/apps/details?id=com.pwr.fitnessadventure">
+  <img alt="Android app on Google Play"
+       src="https://developer.android.com/images/brand/en_app_rgb_wo_60.png" />
+</a></p>
     </div>
 </div>
 
-<div class="container">
+<div class="container" id="hero">
     <!-- Example row of columns -->
     <div class="row">
-        <div class="col-md-4">
-            <h2>Heading</h2>
-
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-xs-6 col-sm-3">
+            <h2>Warrior</h2>
+            <p style="text-align: center"><img src="images/class/warrior.png" class="grayscale"></p>
+            <p><b>Who?</b><br>Fearless and fierce fighter, with enough power to carry the sword and plenty of grace in the fight.</br></p>
+            <p><b>Pick when: </b><br>You want to put emphasis on increasing your strength.</br></p>
         </div>
-        <div class="col-md-4">
-            <h2>Heading</h2>
-
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-xs-6 col-sm-3">
+            <h2>Rouge</h2>
+            <p style="text-align: center"><img src="images/class/rogue.png" class="grayscale"></p>
+            <p><b>Who?</b><br>Fast and quick thief, with reflex and great coordination.</br></p>
+            <p><b>Pick when: </b><br>You want to put emphasis on cardio excersises.</br></p>
         </div>
-        <div class="col-md-4">
-            <h2>Heading</h2>
-
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum massa justo sit amet risus.</p>
-
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-xs-6 col-sm-3">
+            <h2>Mage</h2>
+            <p style="text-align: center"><img src="images/class/mage.png" class="grayscale"></p>
+            <p><b>Who?</b><br>Mages are known across the land for their total hardcoreness and staying away from boring gyms.</br></p>
+            <p><b>Pick when: </b><br>Your priority in exercises is having fun (preferably with friends).</br></p>
+        </div>
+        <div class="col-xs-6 col-sm-3">
+            <h2>Healer</h2>
+            <p style="text-align: center"><img src="images/class/healer.png" class="grayscale"></p>
+            <p><b>Who?</b><br>A very special kind of mage, who prefers to keep it chill and pleasant!</br></p>
+            <p><b>Pick when: </b><br>You want to start easy, and you care mostly about health benefits of sports.</br></p>
         </div>
     </div>
 
@@ -164,7 +164,7 @@
 
 
     <footer>
-        <p>&copy; Company 2014</p>
+        <p>&copy; FitnessAdventure 2015</p>
     </footer>
 </div>
 
