--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <p><b>Pick when: </b><br>You want to put emphasis on increasing your strength.</br></p>
         </div>
         <div class="col-xs-6 col-sm-3">
-            <h2>Rouge</h2>
+            <h2>Rogue</h2>
             <p style="text-align: center"><img src="images/class/rogue.png" class="grayscale"></p>
             <p><b>Who?</b><br>Fast and quick thief, with reflex and great coordination.</br></p>
             <p><b>Pick when: </b><br>You want to put emphasis on cardio excersises.</br></p>
