--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 </div>
 
-<div class="container" id="hero">
+<div class="container anchor" id="hero">
     <!-- Example row of columns -->
     <div class="row">
         <div class="col-xs-6 col-sm-3">
@@ -85,7 +85,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="row featurette anchor">
         <div class="col-md-7">
             <h2 class="featurette-heading">First featurette heading. <span
                     class="text-muted">It'll blow your mind.</span></h2>
@@ -111,7 +111,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="row featurette anchor">
         <div class="col-md-5">
             <div id="phone-container">
                 <img src="images/demo-pl/_empty.png" class="slideshow-border">
@@ -137,7 +137,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="row featurette anchor">
         <div class="col-md-7">
             <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
 
