Small layout corrections, main content headers

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 
     <style>
-    .jumbotron {
-        background: url('images/background_map.png') no-repeat center center;
-    }
+        .jumbotron {
+            background: url('images/background_map.png') no-repeat center center;
+        }
     </style>
 </head>
 <body>
@@ -34,7 +34,7 @@
                 <li><a href="#hero">The Hero</a></li>
                 <li><a href="#game">The Game</a></li>
                 <li><a href="#developers">The Masterminds</a></li>
-              </ul>
+            </ul>
         </div>
         <!--/.navbar-collapse -->
     </div>
@@ -44,12 +44,14 @@
 <div class="jumbotron">
     <div class="container">
         <h1 class="header-title">Your Quest begins now.</h1>
-        <p style="color: white; ">Jump start your new lifestyle and battle the laziness - both in game and in real life.</p>
+
+        <p style="color: white; ">Jump start your new lifestyle and battle the laziness - both in game and in real
+            life.</p>
 
         <p><a href="https://play.google.com/store/apps/details?id=com.pwr.fitnessadventure">
-  <img alt="Android app on Google Play"
-       src="https://developer.android.com/images/brand/en_app_rgb_wo_60.png" />
-</a></p>
+            <img id="google-play-icon" alt="Android app on Google Play"
+                 src="https://developer.android.com/images/brand/en_app_rgb_wo_60.png"/>
+        </a></p>
     </div>
 </div>
 
@@ -58,27 +60,38 @@
     <div class="row">
         <div class="col-xs-6 col-sm-3">
             <h2>Warrior</h2>
-            <p style="text-align: center"><img src="images/class/warrior.png" class="grayscale"></p>
-            <p><b>Who?</b><br>Fearless and fierce fighter, with enough power to carry the sword and plenty of grace in the fight.</br></p>
+            <img src="images/class/warrior.png" class="grayscale">
+
+            <p><b>Who?</b><br>Fearless and fierce fighter, with enough power to carry the sword and plenty of grace in
+                the fight.</br></p>
+
             <p><b>Pick when: </b><br>You want to put emphasis on increasing your strength.</br></p>
         </div>
         <div class="col-xs-6 col-sm-3">
             <h2>Rogue</h2>
-            <p style="text-align: center"><img src="images/class/rogue.png" class="grayscale"></p>
+            <img src="images/class/rogue.png" class="grayscale">
+
             <p><b>Who?</b><br>Fast and quick thief, with reflex and great coordination.</br></p>
+
             <p><b>Pick when: </b><br>You want to put emphasis on cardio excersises.</br></p>
         </div>
         <div class="col-xs-6 col-sm-3">
             <h2>Mage</h2>
-            <p style="text-align: center"><img src="images/class/mage.png" class="grayscale"></p>
-            <p><b>Who?</b><br>Mages are known across the land for their total hardcoreness and staying away from boring gyms.</br></p>
+            <img src="images/class/mage.png" class="grayscale">
+
+            <p><b>Who?</b><br>Mages are known across the land for their total hardcoreness and staying away from boring
+                gyms.</br></p>
+
             <p><b>Pick when: </b><br>Your priority in exercises is having fun (preferably with friends).</br></p>
         </div>
         <div class="col-xs-6 col-sm-3">
             <h2>Healer</h2>
-            <p style="text-align: center"><img src="images/class/healer.png" class="grayscale"></p>
+            <img src="images/class/healer.png" class="grayscale">
+
             <p><b>Who?</b><br>A very special kind of mage, who prefers to keep it chill and pleasant!</br></p>
-            <p><b>Pick when: </b><br>You want to start easy, and you care mostly about health benefits of sports.</br></p>
+
+            <p><b>Pick when: </b><br>You want to start easy, and you care mostly about health benefits of sports.</br>
+            </p>
         </div>
     </div>
 
@@ -87,8 +100,8 @@
 
     <div class="row featurette anchor">
         <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span
-                    class="text-muted">It'll blow your mind.</span></h2>
+            <h2 class="featurette-heading">Discover whole new world. <span
+                    class="text-muted">Tell your own story.</span></h2>
 
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
                 semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
@@ -126,7 +139,7 @@
             </div>
         </div>
         <div class="col-md-7">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span>
+            <h2 class="featurette-heading">Track your progress. <span class="text-muted">See how others going.</span>
             </h2>
 
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
@@ -139,7 +152,7 @@
 
     <div class="row featurette anchor">
         <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+            <h2 class="featurette-heading">Stay motivated. <span class="text-muted">Never give up!</span></h2>
 
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
                 semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
