--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </nav>
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
+<div class="jumbotron special">
     <div class="container">
         <h1 class="header-title">Your Quest begins now.</h1>
 
@@ -96,16 +96,18 @@
     </div>
 
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider" id="game">
 
-    <div class="row featurette anchor">
+    <div class="row featurette anchor" >
         <div class="col-md-7">
             <h2 class="featurette-heading">Discover whole new world. <span
                     class="text-muted">Tell your own story.</span></h2>
 
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
-                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-                commodo.</p>
+            <p class="lead">Welcome to the Fitness Kingdom. Usually, it's fun and full of energy, but recently, a
+                terrible plague has infected the land with the laziness. </p>
+
+            <p class="lead">Join us on an amazing quest to help save the
+                land of Fitness!</p>
         </div>
         <div class="col-md-5">
             <div id="phone-container">
@@ -142,9 +144,9 @@
             <h2 class="featurette-heading">Track your progress. <span class="text-muted">See how others going.</span>
             </h2>
 
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
-                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-                commodo.</p>
+            <p class="lead">Play with friends! Invite them, compete, go up the rank. See how far you got by looking back
+                at
+                your exercise history and be proud of it! </p>
         </div>
     </div>
 
@@ -154,9 +156,14 @@
         <div class="col-md-7">
             <h2 class="featurette-heading">Stay motivated. <span class="text-muted">Never give up!</span></h2>
 
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
-                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-                commodo.</p>
+            <p class="lead">Each time you complete your exercise, your character gets stronger by gaining experience.
+                New levels reveal the shocking plot twists.</p>
+
+            <p class="lead">Don't be lazy, as your health points might drop.</p>
+
+            <p class="lead">Extraordinary achievements earn you badges. Become a Mermaid's Helper by spending hours in a
+                swimming
+                pool.</p>
         </div>
         <div class="col-md-5">
             <div id="phone-container">
@@ -173,8 +180,18 @@
         </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider" id="developers">
 
+    <div class="row featurette anchor">
+        <div class="col-md-12">
+
+            <h2 class="featurette-heading">Become our hero. <span class="text-muted">Join our team.</span></h2>
+
+            <p class="lead">If you have soul of an <span>artist</span>, you are friendly with <span>PHP</span>, or you
+                are passionate about programming <span>mobile applications</span>, contact us at <a href="mailto:heroes@fitness-adventure.com">heroes@fitness-adventure.com</a>.</p>
+
+        </div>
+    </div>
 
     <footer>
         <p>&copy; FitnessAdventure 2015</p>
