--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitnessAdventure</title>
+    <link rel="shortcut icon" href="images/icon.ico">
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 
