--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
         <div class="col-md-8"><h1 class="header-title">Your Quest begins now.</h1>
 
-        <p style="color: white; ">Jump start your new lifestyle and battle the laziness - both in game and in real
+        <p id="tagline">Jump start your new lifestyle and battle the laziness - both in game and in real
             life.</p>
 
         <p><a href="https://play.google.com/store/apps/details?id=com.pwr.fitnessadventure">
@@ -75,35 +75,35 @@
 <div class="container anchor" id="hero">
     <!-- Example row of columns -->
     <div class="row">
-        <div class="col-xs-6 col-sm-3">
+        <div class="col-xs-6 col-sm-3 class-desc">
             <h2>Warrior</h2>
-            <img src="images/class/warrior.png" class="grayscale">
+            <img src="images/class/warrior.png" class="grayscale character-img">
 
             <p><b>Who?</b><br>Fearless and fierce fighter, with enough power to carry the sword and plenty of grace in
                 the fight.</br></p>
 
             <p><b>Pick when: </b><br>You want to put emphasis on increasing your strength.</br></p>
         </div>
-        <div class="col-xs-6 col-sm-3">
+        <div class="col-xs-6 col-sm-3 class-desc">
             <h2>Rogue</h2>
-            <img src="images/class/rogue.png" class="grayscale">
+            <img src="images/class/rogue.png" class="grayscale character-img">
 
             <p><b>Who?</b><br>Fast and quick thief, with reflex and great coordination.</br></p>
 
             <p><b>Pick when: </b><br>You want to put emphasis on cardio excersises.</br></p>
         </div>
-        <div class="col-xs-6 col-sm-3">
+        <div class="col-xs-6 col-sm-3 class-desc">
             <h2>Mage</h2>
-            <img src="images/class/mage.png" class="grayscale">
+            <img src="images/class/mage.png" class="grayscale character-img">
 
             <p><b>Who?</b><br>Mages are known across the land for their total hardcoreness and staying away from boring
                 gyms.</br></p>
 
             <p><b>Pick when: </b><br>Your priority in exercises is having fun (preferably with friends).</br></p>
         </div>
-        <div class="col-xs-6 col-sm-3">
+        <div class="col-xs-6 col-sm-3 class-desc">
             <h2>Healer</h2>
-            <img src="images/class/healer.png" class="grayscale">
+            <img src="images/class/healer.png" class="grayscale character-img">
 
             <p><b>Who?</b><br>A very special kind of mage, who prefers to keep it chill and pleasant!</br></p>
 
@@ -127,7 +127,7 @@
                 land of Fitness!</p>
         </div>
         <div class="col-md-5">
-            <img src="images/features/1.png">
+            <img src="images/features/1.png" class="feature-image">
         </div>
         
     </div>
@@ -136,7 +136,7 @@
 
     <div class="row featurette anchor">
         <div class="col-md-5">
-            <img src="images/features/2.png">
+            <img src="images/features/2.png" class="feature-image">
         </div>
         <div class="col-md-7">
             <h2 class="featurette-heading">Track your progress. <span class="text-muted">See how others going.</span>
@@ -164,7 +164,7 @@
                 pool.</p>
         </div>
         <div class="col-md-5">
-            <img src="images/features/3.png">
+            <img src="images/features/3.png" class="feature-image">
         </div>
     </div>
 
@@ -179,7 +179,7 @@
                 are passionate about programming <span>mobile applications</span>, contact us at <a href="mailto:heroes@fitness-adventure.com">heroes@fitness-adventure.com</a>.
             </p>
 
-            <img src="images/join.png">
+            <img src="images/join.png" class="feature-image">
 
         </div>
     </div>
@@ -191,7 +191,8 @@
 
 <!--<link rel="icon" type="image/x-icon" href="" />-->
 <!-- Jquery and Plug-ins -->
-<script src="js/lib/jquery-1.11.2.min.js"></script>
+<script src="js/lib/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/plugin/jquery.cycle.all.js"></script>
 <!-- Slideshow -->
 <script type="text/javascript">
